--- a/javaee8-ear-archetype/pom.xml
+++ b/javaee8-ear-archetype/pom.xml
@@ -9,9 +9,9 @@
   <version>1.0</version>
   <packaging>maven-archetype</packaging>
 
-  <name>Archetype - javaee8-ear-archetype</name>
+  <name>javaee8-ear-archetype</name>
 
-  <url>https://github.com/UCL/javaee8-ear-archetype</url>
+  <url>https://github.com/UCL/maven-archetypes</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
