--- a/javaee8-ejb-archetype/pom.xml
+++ b/javaee8-ejb-archetype/pom.xml
@@ -9,15 +9,14 @@
   <version>1.0</version>
   <packaging>maven-archetype</packaging>
 
-  <name>Archetype - javaee8-ejb-archetype</name>
+  <name>javaee8-ejb-archetype</name>
 
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/UCL/maven-archetypes</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <build>
