--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>javaee8-ear-archetype</module>
     <module>javaee8-ejb-archetype</module>
     <module>javaee8-lib-archetype</module>
+    <module>jakartaee10-ejb-archetype</module>
   </modules>
   
 </project>
